Improved responsive behavior. Added image to first page. Fixed extra border on the last project.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
       <div class="flex home-title">
         <div class="shape-container">
           <b class="font-name">Louis-Simon Mc Nicoll</b>
-          <div class="shape circle"></div>
+          <div class="shape circle_home"></div>
+          <div class="shape circle_home_picture">
+            <img class="me-image" src="img/me-circle.png"></img>
+          </div>
         </div>
       </div>
       <div class="flex flex-column home-text">
@@ -39,7 +42,7 @@
             <div class="flex flex-column home-text-row-list">
               <div>Software Optimization</div>
               <div>Physics Simulations</div>
-              <div>Requirements Engineering</div>
+              <div>Software Architecture</div>
             </div>
             <div>
               <p><br>I am passionate in</p>
@@ -287,15 +290,23 @@
           <div class="flex about about-row">
             <img class="me-image" src="img/me-circle.png"></img>
             <div class="flex flex-column about-text">
-              <p>During my eight months internship for the AI department of Rakuten in Tokyo, I got involved in every
-                step of the software development life cycle in a multicultural team where communication is often a
-                challenge. This experience made me realize that software is sometimes more about talking to people than
-                it is about talking to machines. I like accompanying a project all the way from deciphering the vision
-                of a customer to realizing it in a fully functional system. During my internship at Pratt & Whitney
-                Canada and my multiple Android development experiences, I had to establish the requirements from the
-                business processes and customer interviews, prototype and incorporate customer feedback, then develop
-                and validate applications to satisfy real needs. In three to five years I would like to have harnessed
-                enough experience to take on a leading role in an important and critical software project.
+              <p>
+                I am a software engineering student about to finish his undergraduate. I like overcoming strict
+                performance and availability challenges and applying my knowledge to interesting fields such as physics
+                simulation or 3D rendering. I have experience in physics simulation and web based data visualization and
+                am proficient in a broad range of programming languages. I had an eight month long internship in Tokyo
+                that really helped me better my interpersonal skills in a diverse team and make my voice heard over the
+                challenges of communication. In three to five years I would like to have developped advanced skills in
+                physics simulation, 3D rendering and software optimization to be able to take a leading role in a game
+                changing project. 
+                <br>
+                If you think I would be a good fit for your company feel free to contact me using the
+                information on my resume.
+                <br>
+                <br>
+                Thank you for your interest,
+                <br>
+                Louis-Simon Mc Nicoll
               </p>
               <div class="flex flex-row contact-me-row">
                 <a href="https://linkedin.com/in/louis-simon-mc-nicoll">
