Removed game jam links. Fixed capitalization

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             </tr>
             <tr>
               <td>English and French</td>
-              <td>Native Level</td>
+              <td>Native level</td>
             </tr>
             <tr>
               <td>Japanese</td>
@@ -276,7 +276,7 @@
             </tr>
             <tr>
               <td>Unity</td>
-              <td>Multiple Game jam experiences [1] [2] along with limited VR usage</td>
+              <td>Multiple Game jam experiences along with limited VR usage</td>
             </tr>
           </table>
         </div>
