--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             </tr>
             <tr>
               <td>Multicultural Environment</td>
-              <td>8 months of work exprience in a Japanese company</td>
+              <td>8 months of work experience in a Japanese company</td>
             </tr>
             <tr>
               <td>English and French</td>
